Update documentation of empty eval